# A_I_Farmer_Assistent

./: .env.template  README.md  app.py  auth.py  chat.py  forms.py  gemini_service.py  local_setup.md  models.py  pyproject.toml  replit.md  requirements.txt  run_local.py  utils.py
instance/: farming_assistant.db
static/css/: style.css
static/js/: chat.js
templates/: base.html  chat.html  farm_profile.html  forgot_password.html  index.html  login.html  profile.html  register.html  reset_password.html
